--- a/assets/styles/reset.scss
+++ b/assets/styles/reset.scss
@@ -20,8 +20,7 @@ time, mark, audio, video {
 	border: 0;
 	font: inherit;
 	vertical-align: baseline;
-}
-html {
+	font-family: 'Nanum Barun Gothic', sans-serif;
   font-size: 10px;
 }
 /* HTML5 display-role reset for older browsers */
