--- a/public/styles/font.scss
+++ b/public/styles/font.scss
@@ -1,3 +1,19 @@
+@mixin font_4070 {
+  @include font_4040;
+  font-weight: 700;
+}
+
+@mixin font_4060 {
+  @include font_4040;
+  font-weight: 600;
+}
+
+@mixin font_4040 {
+  font-size: 4.0rem;
+  font-weight: 400;
+  line-height: 1.4;
+}
+
 @mixin font_2070 {
   @include font_2040;
   font-weight: 700;
@@ -9,7 +25,7 @@
 }
 
 @mixin font_2040 {
-  font-size: 1.4rem;
+  font-size: 2.0rem;
   font-weight: 400;
   line-height: 1.4;
 }
@@ -25,7 +41,7 @@
 }
 
 @mixin font_1640 {
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   font-weight: 400;
   line-height: 1.4;
 }
