feat: 폰트 및 폰트 사이즈 추가 - 30rem 사이즈의 폰트 추가 - 나눔 바른 고딕 폰트 적용

--- a/assets/styles/font.scss
+++ b/assets/styles/font.scss
@@ -14,6 +14,22 @@
   line-height: 1.4;
 }
 
+@mixin font_3070 {
+  @include font_3040;
+  font-weight: 700;
+}
+
+@mixin font_3060 {
+  @include font_3040;
+  font-weight: 600;
+}
+
+@mixin font_3040 {
+  font-size: 3.0rem;
+  font-weight: 400;
+  line-height: 1.4;
+}
+
 @mixin font_2070 {
   @include font_2040;
   font-weight: 700;
